.github/scripts/tests/fixtures/ci-manifest-binding/fail/active-rule-id-missing-from-skills/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — validate-foo.py. Referenced by manifest entry
CI-999 (status: active) so check 2 stays silent. The defect is
that CI-999 (active, CI-\\d+ shape) is absent from SKILL.md → check 3 fires."""
